--- a/app/views/treasure.ejs
+++ b/app/views/treasure.ejs
@@ -1,5 +1,6 @@
     
-<h1><%= currentUser %>'s Treasure!</h1>
+<h1><%= currentUser.username %>'s Treasure!</h1>
+<p>Is admin? <%= currentUser.admin %></p>
 
 <br>
 
